metadataPackage_1670931275320/objects/Harvest_Field__c.object
<CustomObject>
    <label>Harvest Field</label>
    <nameField>
        <label>Harvest Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Harvest Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Crop__c</fullName>
        <label>Crop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aloe</fullName>
                </value>
                <value>
                    <fullName>Eggplant</fullName>
                </value>
                <value>
                    <fullName>Kale</fullName>
                </value>
                <value>
                    <fullName>Pumpkin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Irrigation_Overrides__c</fullName>
        <defaultValue>ABS(0)</defaultValue>
        <label>Irrigation Overrides</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Irrigation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Irrigation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Map_Id__c</fullName>
        <label>Map Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picture_URL__c</fullName>
        <label>Picture URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sensor_Id__c</fullName>
        <externalId>true</externalId>
        <label>Sensor Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alert</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>OK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yield__c</fullName>
        <label>Yield</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>